# MiningProcessor

./: .coverage  .gitignore  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  DESIGN.md  LICENSE  NOTICE  PRODUCT.md  README.md  build-windows.ps1  build.sh  config.json  config_loader.py  equipment_ledger.py  excel_electrical.py  excel_fuel.py  excel_merger.py  excel_production.py  excel_production_enhanced.py  excel_worktime.py  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  runtime_hook_dll_path.py  tauri_bridge.py  tauri_bridge.spec  vite.config.ts
.github/workflows/: build-flet-client.yml  build-tauri.yml  ci.yml  cleanup-artifacts.yml
.serena/: project.yml
Notebook/: Cleaning.ipynb  Fuel.ipynb  Matching.ipynb
assets/: app_icon.icns
docs/: 维修记录统计.md  维修记录统计报告说明.md
docs/plans/: 2026-06-18-001-fix-minebase-sync-field-gaps-plan.md
docs/superpowers/specs/: 2026-04-23-config-selection-save-restore-design.md  2026-04-23-worktime-config-delete-design.md
func/: __init__.py  building.py  config_loader.py  equipment_ledger.py  excel1.py  excel_batch.py  excel_electrical.py  excel_formatter.py  excel_fuel.py  excel_maintenance.py  excel_merger.py  excel_production.py  excel_production_enhanced.py  excel_utils.py  excel_worktime.py  excel_worktime_multifile.py  extraction.py  ledger_base.py  ledger_match.py  ledger_postprocess.py  logger.py  maintenance_classification.py  maintenance_utils.py  oil_ledger.py  orchestration.py  path_utils.py  secret_store.py  string_utils.py  sync_to_minebase.py  writer.py
func/anomaly/: __init__.py  detector.py  filters.py  report.py  rules.py
func/sync/: __init__.py  api_client.py  constants.py  core.py  db_client.py  file_processors.py  row_helpers.py  sync_engines.py
gui/: __init__.py  components.py  log_system.py  logic.py  main.py  theme.py  utils.py
gui/components/: __init__.py  batch.py  common.py  config.py  ledger.py  ledger_base.py  ledger_match.py  log_view.py  maint_config.py  modules.py  oil_ledger.py  sync_minebase.py  types.py  user_config.py
scripts/: bump_version.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icon.py
src-tauri/src/: lib.rs  main.rs  python_bridge.rs
src-tauri/windows/: hooks.nsh
src/components/: AnomalyPanel.tsx  ConnectionStatusBadge.tsx  DatePicker.tsx  LogPanel.tsx  Sidebar.tsx  Toast.tsx
src/components/pages/: BatchProcessingPage.tsx  DataProcessingPage.tsx  DataSyncPage.tsx  EquipmentLedgerPage.tsx  LedgerMatchPage.tsx  LedgerPage.tsx  LoadConfigPage.tsx  MaintConfigPage.tsx  OilLedgerPage.tsx  UserConfigPage.tsx
src/hooks/: useLastDirectory.ts  usePythonBridge.ts
src/lib/: icons.tsx  types.ts  ui-classes.ts
src/test/: LogPanel.test.tsx  Sidebar.test.tsx  Toast.test.tsx  setup.ts  useLastDirectory.test.ts  usePythonBridge.test.ts
tests/: conftest.py  test_anomaly.py  test_batch_progress_fix.py  test_config_loader.py  test_drag_resize.py  test_excel_batch.py  test_excel_batch_progress.py  test_excel_electrical.py  test_excel_formatter.py  test_excel_fuel.py  test_excel_fuel_fix.py  test_excel_handles.py  test_excel_merger.py  test_excel_production.py  test_excel_utils.py  test_excel_utils_fix.py  test_excel_worktime.py  test_excel_worktime_fix.py  test_gui_batch_progress.py  test_gui_components.py  test_header_mapping_unified.py  test_hidden_rows.py  test_ledger_mapping.py  test_ledger_match_improvements.py  test_log_consumer.py  test_logger.py  test_logic_helpers.py  test_maintenance_classification.py  test_oil_ledger.py  test_orchestration.py  test_path_traversal.py  test_production_config_flow.py  test_production_model_match.py  test_secret_store.py  test_string_utils.py  test_sync_file_processors.py  test_sync_to_minebase.py  test_tab_switching.py  test_table_merge.py  test_tauri_bridge.py  (+1 more)
