[project]
name = "MiningProcessor"
version = "0.1.0"
description = "矿山运营 Excel 报表批量处理工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=3.0.2",
    "flet>=0.21.0",
    "rapidfuzz>=3.0.0",
    "matplotlib>=3.10.9",
    "ipykernel>=7.2.0",
    "xlrd>=2.0.2",
    "seaborn>=0.13.2",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["func", "gui"]
[project.scripts]
MiningProcessor = "gui.main:main"
mining-fuel = "func.excel_fuel:main"
mining-electrical = "func.excel_electrical:main"
mining-production = "func.excel_production_enhanced:main"
mining-production-old = "func.excel_production:main"
mining-worktime = "func.excel_worktime:main"
mining-worktime-batch = "func.excel_worktime_multifile:main"
mining-merge = "func.excel_merger:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]
