[project]
name = "MiningProcessor"
version = "0.1.0"
description = "矿山运营 Excel 报表批量处理工具 — 支持 CLI 与 Flet 桌面 GUI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=3.0.2",
    "flet>=0.21.0",
    "flet-datatable2>=0.85.0",
    "rapidfuzz>=3.0.0",
    "xlrd>=2.0.2",
]

[project.scripts]
MiningProcessor = "gui.main:main"
fuel = "func.excel_fuel:main"
electrical = "func.excel_electrical:main"
production = "func.excel_production_enhanced:main"
production-old = "func.excel_production:main"
worktime = "func.excel_worktime:main"
worktime-batch = "func.excel_worktime_multifile:main"
merge = "func.excel_merger:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "ipykernel>=7.2.0",
    "pandas-stubs~=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["func", "gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
