[project]
name = "MiningProcessor"
version = "0.1.0"
description = "矿山运营 Excel 报表批量处理工具 — 支持 CLI 与 Flet 桌面 GUI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=3.0.2",
    "flet>=0.21.0",
    "xlsxwriter>=3.0.0",
    "rapidfuzz>=3.0.0",
    "keyring>=25.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
MiningProcessor = "gui.main:main"
fuel = "func.excel_fuel:main"
electrical = "func.excel_electrical:main"
production = "func.excel_production_enhanced:main"
worktime = "func.excel_worktime:main"
worktime-batch = "func.excel_worktime_multifile:main"
merge = "func.excel_merger:main"
sync-minebase = "func.sync_to_minebase:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["func", "gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
