[package]
name = "mining-processor"
version = "0.2.0"
description = "矿山运营 Excel 报表处理工具 — Tauri + Python"
authors = ["Kearney"]
edition = "2021"

[lib]
name = "mining_processor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
